Generating schemas for make translations
